--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethan Ward - Web Developer from New York</title>
+  <title>Ethan Ward - Web Developer </title>
 
   <!-- 
     - favicon
@@ -117,7 +117,7 @@
               <ion-icon name="trophy"></ion-icon>
             </div>
 
-            <img src="./assets/images/rotate-img.png" width="169" height="172" alt="I'm developer from New York"
+            <img src="./assets/images/rotate-img.png" width="169" height="172" alt=""
               class="rotate-img">
 
           </div>
