--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                   <div>
                
 
-                    <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" class="contact-item-link">     <h3 class="contact-item-title">LinkedIn</h3></a>
+                    <a href="https://www.linkedin.com/in/sanjay70189/" target="_blank" class="contact-item-link">     <h3 class="contact-item-title">LinkedIn</h3></a>
                   </div>
 
                 </li>
